# cheatguard

./: Cargo.toml  README.md
rules/: default.rules.json
src/: lib.rs  main.rs  process.rs  report.rs  rules.rs  scoring.rs
tests/: cli_scan.rs
